# totp_auth

./: .env  .gitignore  LICENSE  README.md  cli.py  install.sh  pyproject.toml  test.html  test.py
.github/workflows/: check-releases.yml  python-publish.yml
src/: cookie.py  server.py
src/classes/: http_request.py  page_loader.py
tests/: test_renderer.py  test_translator.py  test_widgets.py
tests/test_auth_widgets/: test_password.py  test_totp.py
tests/test_core/: test_utils.py
totp_auth/: cli.py  constants.py  cookie.py  errors.py  example.ini  login.html  renderer.py  server.py  utils.py
totp_auth/auth_widgets/: __init__.py  password.py  totp.py
totp_auth/classes/: __init__.py  config.py  db_config.py  http_request.py  page_loader.py
totp_auth/cli/: main.py
totp_auth/cli/api/: __init__.py  base.py  errors.py  models.py
totp_auth/cli/subparsers/: __init__.py  server.py
totp_auth/core/: __init__.py  constants.py  errors.py  renderer.py  utils.py
totp_auth/core/database/: __init__.py  connection.py  models.py
totp_auth/core/database/dao/: base.py  server.py  user.py
totp_auth/core/loaders/: themes.py  translations.py  widgets.py
totp_auth/core/models/: __init__.py  auth_widget.py  enums.py  fields.py
totp_auth/database/: __init__.py  connection.py  dao.py  models.py
totp_auth/loaders/: __init__.py  load_themes.py  load_widgets.py  translator.py
totp_auth/migrations/: 1.sql  _default.sql
totp_auth/models/: __init__.py  auth_widget.py  fields.py
totp_auth/reverse_proxy/: main.py  parse_request.py  response.py
totp_auth/server/: app.py
totp_auth/server/routers/: __init__.py  root.py  servers.py  users.py  widgets.py
totp_auth/static/: index.html  index.js  style.css
totp_auth/static/langs/: en.json  ru.json
totp_auth/static/themes/: dark.css
totp_auth/utils/: errors.py  image_encode.py  load_themes.py  translator.py
